--- a/credits.html
+++ b/credits.html
@@ -23,15 +23,15 @@
 				
 				<div class="dropdown" >
 					<div class="dropbtn" id="menubutton">
-						<img class="menuimage" src="images/menucon.png" >
+
 					</div>
 
 					<div class="dropdown-content" id="drophover">
-						<a id="link1" class="dropdown-item" href="index.html" target="_self">HOME</a>
-						<a id="link2"  class="dropdown-item" href="index.html#about" target="_self">ABOUT</a>
-						<a id="link3"  class="dropdown-item" href="index.html#work" target="_self">WORK</a>
-						<a id="link4"  class="dropdown-item" href="index.html#credits" target="_self">CREDITS</a>
-						<a id="link5"  class="dropdown-item" href="index.html#contact" target="_self">CONTACT</a>
+						<a id="link1" class="dropdown-item" href="index.html">HOME</a>
+						<a id="link2"  class="dropdown-item" href="index.html#about">ABOUT</a>
+						<a id="link3"  class="dropdown-item" href="index.html#work">WORK</a>
+						<a id="link4"  class="dropdown-item" href="#credits">CREDITS</a>
+						<a id="link5"  class="dropdown-item" href="index.html#contact">CONTACT</a>
 					</div>
 				</div>
 				
