--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE HTML><!-- HTML v5-->
 <html>
 	<head>
+		
+		
+		<!--Google analytics-->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113454385-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'UA-113454385-1');
+		</script>
+		<!--END CODE-->
+		
+		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width">
         <link rel="stylesheet"  href="css/style.css" />
 		<script type="text/javascript" src="js/navbar.js"></script>
-		<title>Ben Dotson Audio Post Production and Sound Design</title>
+		<title>Ben Dotson | Audio Post Production | Sound Design | Audio Editing | Post Sound Mixer</title>
 	</head>
 
 	<body>
